2000-03-30  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile (dl-routines): Remove preinit.
	* elf/Versions: Remove _dl_preinit.
	* elf/dl-preinit.c: Removed.  Move content into...
	* elf/dl-init.c: ...here.
	* sysdeps/i386/dl-machine.h (RTLD_START): Remove call to _dl_preinit.

	* sysdeps/generic/bits/shm.h (struct shmid_ds): Correct names of
	with size of dynamic sectionelements.

2000-03-29  Geoff Clare  <gwc@unisoft.com>

	* stdlib/strfmon.c: Corrected problems with the code that
	sets default values for [np]_sep_by_space and
	[np]_sign_posn; also the new positive/negative alignment
	code from the previous patch was not quite right for
	[np]_sign_posn = 0.

	* localedata/tst-fmon.data: Changes corresponding to the
	two sets of fixes made to stdlib/strfmon.c.

2000-03-29  Jes Sorensen  <jes@pcatls01.cern.ch>

	* malloc/malloc.c: Declare bit flags UL so that they will not
	default to int size when being inverted.

2000-03-29  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/arm/errlist.c: Use shlib-compat macros.
	* sysdeps/unix/sysv/linux/arm/siglist.c: Likewise.

2000-03-29  Andreas Jaeger  <aj@suse.de>,
            Ralf Baechle <ralf@uni-koblenz.de>

	* Makeconfig: Introduce new variable SHARED to mark code used in
	the shared library.
	* elf/dl-close.c: Use it instead of PIC.
	* elf/dl-load.c: Likewise.
	* elf/dl-open.c: Likewise.
	* hurd/geteuids.c: Likewise.
	* include/libc-symbols.h: Likewise.
	* include/shlib-compat.h: Likewise.
	* libio/freopen.c: Likewise.
	* linuxthreads/cancel.c: Likewise.
	* linuxthreads/pthread.c: Likewise.
	* linuxthreads/wrapsyscall.c: Likewise.
	* nss/nsswitch.c: Likewise.
	* stdio-common/vfprintf.c: Likewise.
	* sysdeps/arm/init-first.c: Likewise.
	* sysdeps/i386/init-first.c: Likewise
	* sysdeps/generic/init-first.c: Likewise.
	* sysdeps/generic/libc-start.c: Likewise.
	* sysdeps/mips/init-first.c: Likewise.
	* sysdeps/powerpc/elf/libc-start.c: Likewise.
	* sysdeps/unix/sysv/linux/init-first.c: Likewise.