@@ -21,7 +21,14 @@
 
 /* We are almost always included from features.h. */
 #ifndef _FEATURES_H
-#include <features.h>
+# include <features.h>
+#endif
+
+/* The GNU libc does not support any K&R compilers or the traditional mode
+   of ISO C compilers anymore.  Check for some of the combinations not
+   anymore supported.  */
+#if defined __GNUC__ && !defined __STDC__
+# error "You need a ISO C conforming compiler to use the glibc headers"
 #endif
 
 /* Some user header file might have defined this before.  */
